Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-03-01 (SVN):
    * quakefs.c (FS_LoadPackFile): remove the extra '&' before the array
      variable `info' when passing it to fread() as the buffer.
    * Changed beta version date stamp to 2011-03-01.

2011-02-27 (SVN):
    * quakefs.c (FS_OpenFile): fix bug where the path_id was not being set
      for files from a directory tree and resulting in wrong decisions in
      the callers of FS_FileExists().

2011-02-27 (SVN):
    * Changed beta version date stamp to 2011-02-27.

2011-02-27 (SVN):
    * bgmusic.c: fix an oversight which used to cause a segfault when a midi
      driver is available and the requested music file isn't found.

2011-02-27 (SVN):
    * sys_unix.c, sys_win.c (sys_throttle): add new cvar, default value 0.02.
      (main): sleep 1 ms if the time passed since the last Host_Frame() call
      is less than the value of sys_throttle.
    * sys_dos.c (sys_throttle): add new cvar to the dos version too, but only
      for compatibility. dos version shall not throttle.
    * hexen2/host.c (Host_InitLocal): register the new cvar sys_throttle.
    * hexenworld/client/cl_main.c (CL_Init): likewise.
    * hexen2/host.h (sys_throttle): add extern declaration for the new cvar.
    * hexenworld/client/host.h (sys_throttle): likewise.
    * docs/ReleaseNotes-1.5.0: documented the new feature.

2011-02-27 (SVN):
    * rpm spec file: add support for building against libmpg123 instead of
      libmad.

2011-02-25 (SVN):
    * sys_unix.c, sys_win.c:  minor cleanups. made SDL version checks to
      happen even if the binary is run as a dedicated server.

2011-02-23 (SVN):
    * w32stuff/codecs: update libmpg123 header, import libraries and dlls
      to version 1.13.2.

2011-02-21 (SVN):
    * snd_mix.c, minor cleanup: eliminated stupid multiple casting in
      SND_PaintChannelFrom8(), added braces to the inner for loop in
      SND_InitScaletable().

2011-02-21 (SVN):